--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "router_vuex",
+  "name": "pencil-spa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-spinners": "^1.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
